tests/error/type_errors/not_not_bool.py
from guppylang.decorator import guppy
from tests.error.util import NonBool


@guppy
def foo(x: NonBool) -> bool:
    return not x


foo.compile()
